[package]
name = "hyper-markdown-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.29", features = ["full"] }
futures = "0.3"
url-escape = "0.1.1"
tokio-util = { version = "0.7.8", features = ["codec"] }
